syntax = "proto3";

package server;
option go_package = "proto/server";

service OpenAbyss {
  // Obtains the Stored Key Names
  rpc GetKeyNames(EmptyMessage) returns (GetKeyNamesResponse) {}

  // Obtains Stored Public Keys
  rpc GetKeys(EmptyMessage) returns (GetKeysResponse) {}

  // Generates new Keypair
  rpc GenerateKeyPair(GenerateEntityRequest) returns (Entity) {}


  rpc EncryptFile(FilePacket) returns (EncryptResult) {}
  
  // Lists stored path contents
  rpc ListPathContents(ListPathContentRequest) returns (PathContent) {}
}

// ENCRYPT/DECRYPT
message FilePacket {
  bytes   FileBytes = 1;
  int64   SizeInBytes = 2;
  string  FileName = 3;
  string  StoragePath = 4;
  string  KeyName = 5;
}

message EncryptResult {
  string FileStoragePath = 1;
  string FileId = 2;
}

// ENTITY
message Entity {
  string Name = 1;
  bytes PublicKey = 2;
}

message GenerateEntityRequest {
  string Name = 1;
}

// KEYS
message GetKeysResponse {
  repeated Entity Entities = 1;
}

message GetKeyNamesResponse {
  repeated string Keys = 1;
}

// PATHS
message ListPathContentRequest {
  string Path = 1;
}

message ContentType {
  bool IsDirectory = 1;
  string Name = 2;
  uint64 CreatedUnixTimestamp = 3;
}

message PathContent {
  repeated ContentType Content = 1;
}

// MISC
message EmptyMessage {}
